# bachelors-thesis

./: .gitignore  README.md  custom.sh  go.mod  go.sum
bachelor_Grpc/: main.go
bachelor_Grpc/ToDo/: todo.go
bachelor_Grpc/proto/: generic.proto
bachelor_Grpc/to_do_rust/: Cargo.toml
bachelor_Grpc/to_do_rust/src/: lib.rs
echoServerGo/client/: main.go
echoServerGo/proto/: echo.pb.go  echo_grpc.pb.go
echoServerGo/server/: main.go
echoServerRust/: Cargo.toml
echoServerRust/proto/: echo.proto
echoServerRust/src/: client.rs  server.rs
echo_bachelor_example/banchmark/: help.txt
echo_bachelor_example/clientGo/: main.go
echo_bachelor_example/clientPy/: client.py  echo_pb2.py  echo_pb2_grpc.py
echo_bachelor_example/proto/: echo.pb.go  echo.proto
echo_bachelor_example/serverGo/: main.go
echo_bachelor_example/wasm/: echo_server.wasm
echo_server/banchmark/: 100_000-Wasm.html  100_000-Wasm2.html  100_000-Wasm3.html  100_000-Wasmless.html  100_000-Wasmless2.html  100_000-Wasmless3.html  500_000-Wasm.html  500_000-Wasm2.html  500_000-Wasmless.html  500_000-Wasmless2.html  How to banchmark.txt  how to banchmark.txt
echo_server/benchmarks/: EchoServer - old.xlsx  EchoServer.xlsx  EchoServerPerformance.xlsx  EchoServerPerformance10KB.xlsx  EchoServerPerformance1KB.xlsx  How to banchmark.txt  automatic.py
echo_server/benchmarks/wasmless/: test10.json
echo_server/clients/client_Go/: main.go
echo_server/proto/: echo.pb.go  echo_grpc.pb.go
echo_server/servers/wasmless/echo_Rust/: Cargo.toml  build.rs
echo_server/servers/wasmless/echo_Rust/src/: client.rs  server.rs
quizgRPC/player/: main.go
quizgRPC/proto/: quiz.pb.go  quiz.proto  quiz_grpc.pb.go
quizgRPC/quizServer/: main.go
rust_gorums/: Cargo.toml
storage_server/benchmarks/: automatic_storage.py  setUpKeys.sh
storage_server/proto/: storage.pb.go  storage.proto  storage_gorums.pb.go  storage_grpc.pb.go
storage_server/servers/wasm/rust_storage/: Cargo.toml  build.rs
storage_server/servers/wasm/rust_storage/data/: test.json
storage_server/servers/wasm/rust_storage/src/: server.rs
storage_server/servers/wasmless/rust_storage/: Cargo.toml
storage_server/servers/wasmless/rust_storage/src/: server.rs
testing_wasm/: main.go
testing_wasm/proto/: storage.pb.go
wasm/echo_server/: Cargo.toml
wasm/goToWasm/: hello.wasm
wasmGoImport/: age.wasm  main.go  main2.go  wasi.wasm  wasm_test.wasm
wasmTest/: Cargo.toml
wasmTest/src/: lib.rs
wasm_modules/Go_To_Wasm/: test.go
wasm_modules/compile_to_proto_rust/: Cargo.toml  build.rs
wasm_modules/compile_to_proto_rust/protos/: echo.proto  storage.proto
wasm_modules/compile_to_proto_rust/src/: echo.rs
wasm_modules/echo_server/: Cargo.toml
wasm_modules/in_memory_storage/: Cargo.toml
wasm_modules/new_rust_write/: Cargo.toml
wasm_modules/storage_application/: Cargo.toml
wasm_modules/storage_application/src/: main.rs  storage.rs
wasm_modules/wasi_hello_world/: Cargo.toml
wasm_write_to_file/: Wasm.json  Wasm2.json  alloc.txt  main.go  new_rust_write.wasm  storage_application.wasm  testData.txt  testData2.txt
wasm_write_to_file/data/: Wasm.json
(+86 files in other folders)
