[package]
name = "compile_to_proto_rust"
version = "0.1.0"
authors = ["Andrea Esposito <ryuesposito@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.20.0"

[build-dependencies]
protoc-rust = "2.0"