[package]
name = "storage_application"
version = "0.1.0"
authors = ["Andrea Esposito <ryuesposito@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.20.0"
serde_json = "1.0"
serde = "1.0.123"
serde_derive = "1.0.123"