[package]
name = "echo_rust"
version = "0.1.0"
authors = ["Andrea Esposito <ryuesposito@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "echo-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "echo-client"
path = "src/client.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"