[package]
name = "rust_storage"
version = "0.1.0"
authors = ["Andrea Esposito <ryuesposito@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the storage gRPC server
name = "storage-server"
path = "src/server.rs"

# [[bin]] # Bin to run the storage gRPC client
# name = "storage-client"
# path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "09b976e1d53a05150c7b8acd36a82b34cec787b3" }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "09b976e1d53a05150c7b8acd36a82b34cec787b3" }
wasi-cap-std-sync = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "09b976e1d53a05150c7b8acd36a82b34cec787b3" }
anyhow = "1.0.38"
futures = "0.3.12"
protobuf = "2.20.0"
cap-std = "0.13.3"
bytes = "1.0.1"

[build-dependencies]
tonic-build = "0.4"
