[package]
name = "rust_storage"
version = "0.1.0"
authors = ["Andrea Esposito <ryuesposito@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the storage gRPC server
name = "storage-server"
path = "src/server.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = "1.0.123"
serde_derive = "1.0.123"

[build-dependencies]
tonic-build = "0.4"
